# bevy_ridiculous_ssgi

./: .gitignore  Cargo.toml  README.md
assets/models/: cornell_box.glb  dare52.glb  kitchen.gltf
assets/shaders/: deferred_lighting.wgsl  ssgi.wgsl  ssgi_generate_sh.wgsl  ssgi_resolve.wgsl
examples/: cornell_box.rs  dare52.rs  kitchen.rs
examples/large_examples/: bistro.rs  hidden_alley.rs  san_miguel.rs  top_down.rs
src/: bind_group_utils.rs  blue_noise_64x64_l64.dds  copy_frame.rs  copy_frame.wgsl  lib.rs  lighting_pass.rs  prepass_convert.wgsl  prepass_downsample.rs  prepass_downsample.wgsl  rgb9e5.wgsl  sampling.wgsl  ssgi.rs  ssgi_common.wgsl  ssgi_generate_sh.rs  ssgi_resolve.rs  xyz8e5.wgsl
